--- a/Serein/WPF/Serein-WPF.csproj
+++ b/Serein/WPF/Serein-WPF.csproj
@@ -62,6 +62,7 @@
 		</PackageReference>
 		<PackageReference Include="Downloader" Version="3.0.6" />
 		<PackageReference Include="Jint" Version="3.0.0-beta-2048" />
+		<PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
 		<PackageReference Include="NCrontab.Signed" Version="3.3.2" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Notification.Wpf" Version="7.0.0.1" />
