--- a/Serein/WPF/Serein-WPF.csproj
+++ b/Serein/WPF/Serein-WPF.csproj
@@ -51,6 +51,7 @@
 		<Compile Remove="..\Universal\Core\JSPlugin\Permissions\PermissionManager.cs" />
 		<Compile Remove="..\Universal\Core\JSPlugin\Plugin.cs" />
 		<Compile Remove="..\Universal\Core\JSPlugin\PreLoadConfig.cs" />
+		<Compile Remove="..\Universal\Core\Server\PlayerManager.cs" />
 		<Compile Remove="..\Universal\Settings\Bot.cs" />
 		<Content Include="..\Universal\Sources\Serein.ico" />
 		<Resource Include="..\Universal\Sources\Serein.ico" />
